--- a/index.html
+++ b/index.html
@@ -1,178 +1,262 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AI Chat — Coding Assistant</title>
-  <meta name="description" content="Minimal AI chat for coding. Paste your OpenAI API key and chat." />
-  <style>
-    :root{
-      --bg:#0f1724; --panel:#0b1220; --muted:#9aa4b2; --accent:#60a5fa;
-      --user:#0ea5a4; --ai:#7c3aed;
-    }
-    html,body{height:100%;margin:0;background:linear-gradient(180deg,var(--bg),#071026);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;}
-    .wrap{max-width:900px;margin:28px auto;padding:18px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01)); border-radius:12px; box-shadow:0 10px 30px rgba(2,6,23,0.6);}
-    header{display:flex;align-items:center;gap:12px;margin-bottom:12px;}
-    h1{color:#e6eef8;font-size:18px;margin:0;}
-    .muted{color:var(--muted);font-size:13px;}
-    .controls{display:flex;gap:8px;align-items:center;margin:10px 0;}
-    input[type="password"]{flex:1;padding:10px;border-radius:8px;border:1px solid rgba(255,255,255,0.06);background:transparent;color:#dbeafe;}
-    button{padding:9px 12px;border-radius:8px;border:0;background:var(--accent);color:#05223b;font-weight:600;cursor:pointer}
-    button.ghost{background:transparent;border:1px solid rgba(255,255,255,0.04);color:var(--muted)}
-    main{display:flex;gap:16px;}
-    .chat{flex:1;min-height:420px;background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.005));padding:14px;border-radius:10px;border:1px solid rgba(255,255,255,0.02);overflow:auto;max-height:62vh;}
-    .row{display:flex;gap:8px;margin:8px 0;align-items:flex-end}
-    .msg{padding:12px;border-radius:10px;max-width:85%;white-space:pre-wrap;line-height:1.45}
-    .from-user{margin-left:auto;background:linear-gradient(90deg,var(--user),#06b6d4);color:#022;box-shadow:0 6px 18px rgba(14,165,164,0.08)}
-    .from-ai{background:linear-gradient(90deg,var(--ai),#8b5cf6);color:#061025;box-shadow:0 6px 18px rgba(124,58,237,0.06)}
-    .meta{font-size:12px;color:rgba(255,255,255,0.6);margin-bottom:6px}
-    footer{display:flex;gap:8px;margin-top:12px;align-items:center}
-    textarea{flex:1;padding:12px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:#e6eef8;min-height:56px;resize:vertical}
-    .note{font-size:12px;color:var(--muted);margin-top:8px}
-    .small{font-size:12px;color:var(--muted)}
-    .sys{width:100%;padding:8px;border-radius:8px;border:1px dashed rgba(255,255,255,0.03);background:transparent;color:var(--muted)}
-    .center{display:flex;justify-content:center}
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>AI Chat (Gemini)</title>
+
+<!-- Prism.js for syntax highlighting -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-tomorrow.css">
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-python.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-javascript.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/components/prism-cpp.min.js"></script>
+
+<style>
+  body {
+    background: #0e0e0e;
+    color: #eee;
+    font-family: system-ui, sans-serif;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+  }
+  #chat {
+    width: 90%;
+    max-width: 800px;
+    height: 80vh;
+    overflow-y: auto;
+    background: #1a1a1a;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0 0 10px #000;
+    display: flex;
+    flex-direction: column;
+    scroll-behavior: smooth;
+  }
+  .msg {
+    display: flex;
+    align-items: flex-start;
+    gap: 10px;
+    margin: 10px 0;
+    padding: 12px 16px;
+    border-radius: 8px;
+    white-space: pre-wrap;
+    line-height: 1.4;
+    width: fit-content;
+    max-width: 90%;
+  }
+  .user {
+    background: #2d7;
+    align-self: flex-end;
+    color: #000;
+  }
+  .bot {
+    background: #2b2b2b;
+    align-self: flex-start;
+    color: #eee;
+  }
+  .avatar {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    flex-shrink: 0;
+  }
+  .bot .avatar {
+    background: #2d7;
+    animation: pulse 1.5s infinite;
+  }
+  .user .avatar {
+    background: #555;
+  }
+  @keyframes pulse {
+    0%, 100% { transform: scale(1); opacity: 0.8; }
+    50% { transform: scale(1.2); opacity: 1; }
+  }
+  code, pre {
+    font-family: "Fira Code", monospace;
+    font-size: 14px;
+    border-radius: 8px;
+  }
+  pre {
+    background: #111 !important;
+    padding: 10px;
+    overflow-x: auto;
+  }
+  #inputArea {
+    display: flex;
+    width: 90%;
+    max-width: 800px;
+    margin-top: 10px;
+  }
+  input {
+    flex: 1;
+    padding: 12px;
+    border: none;
+    border-radius: 6px 0 0 6px;
+    background: #222;
+    color: #eee;
+  }
+  button {
+    padding: 12px 18px;
+    border: none;
+    background: #2d7;
+    color: #000;
+    border-radius: 0 6px 6px 0;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  button:hover {
+    background: #3f8;
+  }
+  #keySection {
+    width: 90%;
+    max-width: 800px;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+  }
+  #keyInput {
+    flex: 1;
+    padding: 10px;
+    border-radius: 8px;
+    background: #222;
+    color: #eee;
+    border: none;
+  }
+  #saveKey, #clearKey {
+    border-radius: 8px;
+    border: none;
+    padding: 10px 15px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  #saveKey { background: #2d7; color: #000; }
+  #clearKey { background: #d44; color: #fff; }
+  .typing {
+    display: inline-flex;
+    align-items: center;
+    gap: 3px;
+  }
+  .dot {
+    width: 6px;
+    height: 6px;
+    background: #2d7;
+    border-radius: 50%;
+    animation: blink 1.4s infinite;
+  }
+  .dot:nth-child(2) { animation-delay: 0.2s; }
+  .dot:nth-child(3) { animation-delay: 0.4s; }
+  @keyframes blink {
+    0%, 80%, 100% { opacity: 0.2; transform: scale(1); }
+    40% { opacity: 1; transform: scale(1.3); }
+  }
+</style>
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <div style="flex:1">
-        <h1>AI Chat — Coding Assistant</h1>
-        <div class="muted">Simple chat UI — paste your OpenAI API key and ask for code help</div>
-      </div>
-      <div class="small">Single file • client-side</div>
-    </header>
-
-    <div class="controls">
-      <input id="key" type="password" placeholder="Paste OpenAI API key (sk-...)" autocomplete="off" />
-      <button id="save">Save</button>
-      <button id="clear" class="ghost">Clear Key</button>
-    </div>
-
-    <div class="note">System prompt (controls assistant behavior):</div>
-    <div style="margin:8px 0"><textarea id="system" class="sys" rows="2">You are a helpful assistant specialized in writing and explaining code. Give concise answers and include runnable examples when useful. Prefer safe, modern practices.</textarea></div>
-
-    <main>
-      <div class="chat" id="chat" aria-live="polite"></div>
-    </main>
-
-    <footer>
-      <textarea id="input" placeholder="Ask about JavaScript, Python, HTML... (Shift+Enter for newline)"></textarea>
-      <button id="send">Send</button>
-    </footer>
-
-    <div class="center" style="margin-top:10px">
-      <div class="small muted">No messages are sent to any server except OpenAI. Keys are stored in localStorage only if you press Save.</div>
-    </div>
+  <h2>💻 AI Chat (Gemini)</h2>
+  <div id="keySection">
+    <input id="keyInput" type="password" placeholder="Enter your Gemini API Key" />
+    <button id="saveKey">Save</button>
+    <button id="clearKey">Clear</button>
+  </div>
+  <div id="chat"></div>
+  <div id="inputArea">
+    <input id="userInput" type="text" placeholder="Type your message..." />
+    <button id="sendBtn">Send</button>
   </div>
 
 <script>
-  // Minimal chat-only single-file app
-  const keyInput = document.getElementById('key');
-  const saveBtn = document.getElementById('save');
-  const clearBtn = document.getElementById('clear');
-  const sendBtn = document.getElementById('send');
-  const inputEl = document.getElementById('input');
-  const chat = document.getElementById('chat');
-  const systemEl = document.getElementById('system');
+const chat = document.getElementById("chat");
+const userInput = document.getElementById("userInput");
+const sendBtn = document.getElementById("sendBtn");
+const keyInput = document.getElementById("keyInput");
+const saveKey = document.getElementById("saveKey");
+const clearKey = document.getElementById("clearKey");
 
-  // load saved key
-  if (localStorage.getItem('ai_chat_key')) keyInput.value = localStorage.getItem('ai_chat_key');
+// Load saved key
+const savedKey = localStorage.getItem("geminiKey");
+if (savedKey) keyInput.value = savedKey;
 
-  saveBtn.onclick = () => {
-    const k = keyInput.value.trim();
-    if(!k){ alert('Paste an API key to save.'); return; }
-    localStorage.setItem('ai_chat_key', k);
-    alert('Key saved to localStorage (client-side).');
-  };
-  clearBtn.onclick = () => {
-    localStorage.removeItem('ai_chat_key');
-    keyInput.value = '';
-    alert('Key cleared from localStorage.');
-  };
+saveKey.onclick = () => {
+  const key = keyInput.value.trim();
+  if (key) {
+    localStorage.setItem("geminiKey", key);
+    alert("✅ API Key saved locally!");
+  } else alert("⚠️ Enter a valid key first.");
+};
+clearKey.onclick = () => {
+  localStorage.removeItem("geminiKey");
+  keyInput.value = "";
+  alert("🗑️ API Key cleared!");
+};
 
-  // In-memory history (role/content)
-  const history = [];
+// Add message with avatar + typing animation
+function addMessage(content, sender, isTyping = false) {
+  const wrapper = document.createElement("div");
+  wrapper.className = `msg ${sender}`;
+  const avatar = document.createElement("div");
+  avatar.className = "avatar";
 
-  function addMessage(role, text){
-    const wrap = document.createElement('div');
-    wrap.className = 'row';
-    const bubble = document.createElement('div');
-    bubble.className = 'msg ' + (role === 'user' ? 'from-user' : 'from-ai');
-    const meta = document.createElement('div');
-    meta.className = 'meta';
-    meta.textContent = role === 'user' ? 'You' : 'AI';
-    bubble.appendChild(meta);
-    const body = document.createElement('div');
-    body.textContent = text;
-    bubble.appendChild(body);
-    wrap.appendChild(bubble);
-    chat.appendChild(wrap);
-    chat.scrollTop = chat.scrollHeight;
+  const message = document.createElement("div");
+  message.className = "text";
+
+  if (isTyping) {
+    message.innerHTML = `<div class="typing"><div class="dot"></div><div class="dot"></div><div class="dot"></div></div>`;
+  } else {
+    const codeBlockRegex = /```(\w+)?\n([\s\S]*?)```/g;
+    let formatted = content.replace(codeBlockRegex, (m, lang, code) => {
+      lang = lang || "javascript";
+      return `<pre><code class="language-${lang}">${Prism.highlight(code, Prism.languages[lang] || Prism.languages.javascript, lang)}</code></pre>`;
+    });
+    formatted = formatted.replace(/`([^`]+)`/g, '<code>$1</code>');
+    message.innerHTML = formatted;
   }
 
-  async function fetchReply(userText){
-    const key = keyInput.value.trim() || localStorage.getItem('ai_chat_key');
-    if(!key){ alert('Please paste your OpenAI API key in the box.'); return; }
+  wrapper.appendChild(avatar);
+  wrapper.appendChild(message);
+  chat.appendChild(wrapper);
+  chat.scrollTop = chat.scrollHeight;
+  return wrapper;
+}
 
-    addMessage('user', userText);
-    history.push({role:'user', content:userText});
+async function queryGemini(prompt) {
+  const apiKey = localStorage.getItem("geminiKey") || keyInput.value.trim();
+  if (!apiKey) {
+    alert("Please enter and save your Gemini API key first.");
+    return "⚠️ No API key.";
+  }
 
-    // placeholder
-    const placeholder = document.createElement('div');
-    placeholder.className = 'row';
-    placeholder.innerHTML = '<div class="msg from-ai"><div class="meta">AI</div><div>...</div></div>';
-    chat.appendChild(placeholder);
-    chat.scrollTop = chat.scrollHeight;
-
-    // build messages: system + last 12
-    const messages = [{role:'system', content: systemEl.value}];
-    const recent = history.slice(-12);
-    recent.forEach(m => messages.push(m));
-
-    try {
-      const res = await fetch('https://api.openai.com/v1/chat/completions', {
-        method:'POST',
-        headers:{ 'Content-Type':'application/json', 'Authorization':'Bearer ' + key },
-        body: JSON.stringify({
-          model: 'gpt-4o-mini',
-          messages,
-          temperature: 0.15,
-          max_tokens: 800
-        })
-      });
-
-      if(!res.ok){
-        const txt = await res.text();
-        throw new Error('OpenAI error: ' + res.status + ' ' + txt);
-      }
-      const data = await res.json();
-      const assistant = data.choices?.[0]?.message?.content || 'No response.';
-      // remove placeholder and append real
-      chat.removeChild(placeholder);
-      addMessage('assistant', assistant);
-      history.push({role:'assistant', content:assistant});
-    } catch (err) {
-      chat.removeChild(placeholder);
-      addMessage('assistant', 'Error: ' + err.message);
-      console.error(err);
+  const response = await fetch(
+    "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=" + apiKey,
+    {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ contents: [{ parts: [{ text: prompt }] }] })
     }
-  }
+  );
+  const data = await response.json();
+  return data.candidates?.[0]?.content?.parts?.[0]?.text || "⚠️ No response";
+}
 
-  sendBtn.onclick = () => {
-    const t = inputEl.value.trim();
-    if(!t) return;
-    inputEl.value = '';
-    fetchReply(t);
-  };
+sendBtn.onclick = async () => {
+  const text = userInput.value.trim();
+  if (!text) return;
+  addMessage(text, "user");
+  userInput.value = "";
 
-  inputEl.addEventListener('keydown', (e) => {
-    if(e.key === 'Enter' && !e.shiftKey){ e.preventDefault(); sendBtn.click(); }
-  });
+  const typing = addMessage("", "bot", true);
+  const reply = await queryGemini(text);
+  typing.remove();
+  addMessage(reply, "bot");
+};
 
-  // Welcome message
-  addMessage('assistant', "Hello — I'm your coding AI. Paste an OpenAI API key above, then ask me to write, explain, or fix code. Example: \"Fix my fetch() code giving CORS\" or \"Show a simple Node.js Express example.\"");
+userInput.addEventListener("keypress", (e) => {
+  if (e.key === "Enter") sendBtn.click();
+});
 </script>
 </body>
 </html>
+
